force-app/main/default/objects/WorkOrder/fields/Preferred_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Date_1__c</fullName>
    <label>Preferred Date 1</label>
    <description>Customer's first preferred installation date</description>
    <type>Date</type>
</CustomField>