force-app/main/default/objects/WorkOrder/fields/Preferred_Time_1__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Time_1__c</fullName>
    <label>Preferred Time 1</label>
    <description>Time of day for first preference (Morning, Afternoon, or Evening)</description>
    <type>Text</type>
    <length>20</length>
</CustomField>