force-app/main/default/objects/WorkOrder/fields/Preferred_Time_2__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Time_2__c</fullName>
    <label>Preferred Time 2</label>
    <description>Time of day for second preference (Morning, Afternoon, or Evening)</description>
    <type>Text</type>
    <length>20</length>
</CustomField>